[gd_scene load_steps=8 format=3 uid="uid://dgg27s4x2cac3"]

[ext_resource type="Script" uid="uid://bxhdcck7k30f3" path="res://Scripts/table.gd" id="1_i5vl2"]
[ext_resource type="Material" uid="uid://bpmyesc0tqm4h" path="res://Assets/mats/bert_wood_01.tres" id="1_m1of8"]
[ext_resource type="PackedScene" uid="uid://clp7lxvtckaky" path="res://Assets/models/Molten Maps SciFi Asset Pack/Assets/gtlf/End_Table.glb" id="3_u7ef4"]

[sub_resource type="CylinderMesh" id="CylinderMesh_i5vl2"]
material = ExtResource("1_m1of8")
height = 0.05

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_u7ef4"]
points = PackedVector3Array(0, -0.025, -0.5, -0.0490407, -0.025, -0.497651, 0, 0.025, -0.5, 0.0489429, -0.025, -0.497651, -0.0490407, 0.025, -0.497651, -0.097592, -0.025, -0.490407, 0.0489429, 0.025, -0.497651, 0.0974941, -0.025, -0.490407, -0.097592, 0.025, -0.490407, -0.145164, -0.025, -0.478563, 0.0974941, 0.025, -0.490407, 0.145067, -0.025, -0.478563, -0.145164, 0.025, -0.478563, -0.191366, -0.025, -0.46202, 0.145067, 0.025, -0.478563, 0.191269, -0.025, -0.46202, -0.191366, 0.025, -0.46202, -0.235709, -0.025, -0.440975, 0.191269, 0.025, -0.46202, 0.235611, -0.025, -0.440975, -0.235709, 0.025, -0.440975, -0.2778, -0.025, -0.415818, 0.235611, 0.025, -0.440975, 0.277702, -0.025, -0.415818, -0.2778, 0.025, -0.415818, -0.317247, -0.025, -0.386551, 0.277702, 0.025, -0.415818, 0.31715, -0.025, -0.386551, -0.317247, 0.025, -0.386551, -0.353563, -0.025, -0.353563, 0.31715, 0.025, -0.386551, 0.353465, -0.025, -0.353563, -0.353563, 0.025, -0.353563, -0.386551, -0.025, -0.317247, 0.353465, 0.025, -0.353563, 0.386453, -0.025, -0.317247, -0.386551, 0.025, -0.317247, -0.415818, -0.025, -0.2778, 0.386453, 0.025, -0.317247, 0.41572, -0.025, -0.2778, -0.415818, 0.025, -0.2778, -0.440975, -0.025, -0.235709, 0.41572, 0.025, -0.2778, 0.440877, -0.025, -0.235709, -0.440975, 0.025, -0.235709, -0.46202, -0.025, -0.191366, 0.440877, 0.025, -0.235709, 0.461922, -0.025, -0.191366, -0.46202, 0.025, -0.191366, -0.478563, -0.025, -0.145164, 0.461922, 0.025, -0.191366, 0.478465, -0.025, -0.145164, -0.478563, 0.025, -0.145164, -0.490407, -0.025, -0.097592, 0.478465, 0.025, -0.145164, 0.490309, -0.025, -0.097592, -0.490407, 0.025, -0.097592, -0.497651, -0.025, -0.0490407, 0.490309, 0.025, -0.097592, 0.497553, -0.025, -0.0490407, -0.497651, 0.025, -0.0490407, -0.5, -0.025, 0, 0.497553, 0.025, -0.0490407, 0.5, -0.025, 0, -0.5, 0.025, 0, -0.497651, -0.025, 0.0489429, 0.5, 0.025, 0, 0.497553, -0.025, 0.0489429, -0.497651, 0.025, 0.0489429, -0.490407, -0.025, 0.0974941, 0.497553, 0.025, 0.0489429, 0.490309, -0.025, 0.0974941, -0.490407, 0.025, 0.0974941, -0.478563, -0.025, 0.145067, 0.490309, 0.025, 0.0974941, 0.478465, -0.025, 0.145067, -0.478563, 0.025, 0.145067, -0.46202, -0.025, 0.191269, 0.478465, 0.025, 0.145067, 0.461922, -0.025, 0.191269, -0.46202, 0.025, 0.191269, -0.440975, -0.025, 0.235611, 0.461922, 0.025, 0.191269, 0.440877, -0.025, 0.235611, -0.440975, 0.025, 0.235611, -0.415818, -0.025, 0.277702, 0.440877, 0.025, 0.235611, 0.41572, -0.025, 0.277702, -0.415818, 0.025, 0.277702, -0.386551, -0.025, 0.31715, 0.41572, 0.025, 0.277702, 0.386453, -0.025, 0.31715, -0.386551, 0.025, 0.31715, -0.353563, -0.025, 0.353465, 0.386453, 0.025, 0.31715, 0.353465, -0.025, 0.353465, -0.353563, 0.025, 0.353465, -0.317247, -0.025, 0.386453, 0.353465, 0.025, 0.353465, 0.31715, -0.025, 0.386453, -0.317247, 0.025, 0.386453, -0.2778, -0.025, 0.41572, 0.31715, 0.025, 0.386453, 0.277702, -0.025, 0.41572, -0.2778, 0.025, 0.41572, -0.235709, -0.025, 0.440877, 0.277702, 0.025, 0.41572, 0.235611, -0.025, 0.440877, -0.235709, 0.025, 0.440877, -0.191366, -0.025, 0.461922, 0.235611, 0.025, 0.440877, 0.191269, -0.025, 0.461922, -0.191366, 0.025, 0.461922, -0.145164, -0.025, 0.478465, 0.191269, 0.025, 0.461922, 0.145067, -0.025, 0.478465, -0.145164, 0.025, 0.478465, -0.097592, -0.025, 0.490309, 0.145067, 0.025, 0.478465, 0.0974941, -0.025, 0.490309, -0.097592, 0.025, 0.490309, -0.0490407, -0.025, 0.497553, 0.0974941, 0.025, 0.490309, 0.0489429, -0.025, 0.497553, -0.0490407, 0.025, 0.497553, 0, -0.025, 0.5, 0.0489429, 0.025, 0.497553, 0, 0.025, 0.5)

[sub_resource type="CylinderMesh" id="CylinderMesh_5ny2m"]
material = ExtResource("1_m1of8")
top_radius = 0.1
bottom_radius = 0.1
height = 1.0

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_htvo2"]
points = PackedVector3Array(-0.1, -0.5, 0, -0.0995302, -0.5, -0.00980815, -0.0995302, -0.5, 0.00978857, -0.1, 0.5, 0, -0.0980814, -0.5, -0.0195184, -0.0995302, 0.5, -0.00980815, -0.0980814, -0.5, 0.0194988, -0.0995302, 0.5, 0.00978857, -0.0957126, -0.5, -0.0290329, -0.0980814, 0.5, -0.0195184, -0.0957126, -0.5, 0.0290133, -0.0980814, 0.5, 0.0194988, -0.0924041, -0.5, -0.0382733, -0.0957126, 0.5, -0.0290329, -0.0924041, -0.5, 0.0382537, -0.0957126, 0.5, 0.0290133, -0.088195, -0.5, -0.0471417, -0.0924041, 0.5, -0.0382733, -0.088195, -0.5, 0.0471222, -0.0924041, 0.5, 0.0382537, -0.0831637, -0.5, -0.0555599, -0.088195, 0.5, -0.0471417, -0.0831637, -0.5, 0.0555403, -0.088195, 0.5, 0.0471222, -0.0773101, -0.5, -0.0634495, -0.0831637, 0.5, -0.0555599, -0.0773101, -0.5, 0.0634299, -0.0831637, 0.5, 0.0555403, -0.0707126, -0.5, -0.0707126, -0.0773101, 0.5, -0.0634495, -0.0707126, -0.5, 0.070693, -0.0773101, 0.5, 0.0634299, -0.0634495, -0.5, -0.0773101, -0.0707126, 0.5, -0.0707126, -0.0634495, -0.5, 0.0772905, -0.0707126, 0.5, 0.070693, -0.0555599, -0.5, -0.0831637, -0.0634495, 0.5, -0.0773101, -0.0555599, -0.5, 0.0831441, -0.0634495, 0.5, 0.0772905, -0.0471417, -0.5, -0.088195, -0.0555599, 0.5, -0.0831637, -0.0471417, -0.5, 0.0881754, -0.0555599, 0.5, 0.0831441, -0.0382733, -0.5, -0.0924041, -0.0471417, 0.5, -0.088195, -0.0382733, -0.5, 0.0923845, -0.0471417, 0.5, 0.0881754, -0.0290329, -0.5, -0.0957126, -0.0382733, 0.5, -0.0924041, -0.0290329, -0.5, 0.095693, -0.0382733, 0.5, 0.0923845, -0.0195184, -0.5, -0.0980814, -0.0290329, 0.5, -0.0957126, -0.0195184, -0.5, 0.0980619, -0.0290329, 0.5, 0.095693, -0.00980815, -0.5, -0.0995302, -0.0195184, 0.5, -0.0980814, -0.00980815, -0.5, 0.0995106, -0.0195184, 0.5, 0.0980619, 0, -0.5, -0.1, -0.00980815, 0.5, -0.0995302, 0, -0.5, 0.1, -0.00980815, 0.5, 0.0995106, 0.00978857, -0.5, -0.0995302, 0, 0.5, -0.1, 0.00978857, -0.5, 0.0995106, 0, 0.5, 0.1, 0.0194988, -0.5, -0.0980814, 0.00978857, 0.5, -0.0995302, 0.0194988, -0.5, 0.0980619, 0.00978857, 0.5, 0.0995106, 0.0290133, -0.5, -0.0957126, 0.0194988, 0.5, -0.0980814, 0.0290133, -0.5, 0.095693, 0.0194988, 0.5, 0.0980619, 0.0382537, -0.5, -0.0924041, 0.0290133, 0.5, -0.0957126, 0.0382537, -0.5, 0.0923845, 0.0290133, 0.5, 0.095693, 0.0471222, -0.5, -0.088195, 0.0382537, 0.5, -0.0924041, 0.0471222, -0.5, 0.0881754, 0.0382537, 0.5, 0.0923845, 0.0555403, -0.5, -0.0831637, 0.0471222, 0.5, -0.088195, 0.0555403, -0.5, 0.0831441, 0.0471222, 0.5, 0.0881754, 0.0634299, -0.5, -0.0773101, 0.0555403, 0.5, -0.0831637, 0.0634299, -0.5, 0.0772905, 0.0555403, 0.5, 0.0831441, 0.070693, -0.5, -0.0707126, 0.0634299, 0.5, -0.0773101, 0.070693, -0.5, 0.070693, 0.0634299, 0.5, 0.0772905, 0.0772905, -0.5, -0.0634495, 0.070693, 0.5, -0.0707126, 0.0772905, -0.5, 0.0634299, 0.070693, 0.5, 0.070693, 0.0831441, -0.5, -0.0555599, 0.0772905, 0.5, -0.0634495, 0.0831441, -0.5, 0.0555403, 0.0772905, 0.5, 0.0634299, 0.0881754, -0.5, -0.0471417, 0.0831441, 0.5, -0.0555599, 0.0881754, -0.5, 0.0471222, 0.0831441, 0.5, 0.0555403, 0.0923845, -0.5, -0.0382733, 0.0881754, 0.5, -0.0471417, 0.0923845, -0.5, 0.0382537, 0.0881754, 0.5, 0.0471222, 0.095693, -0.5, -0.0290329, 0.0923845, 0.5, -0.0382733, 0.095693, -0.5, 0.0290133, 0.0923845, 0.5, 0.0382537, 0.0980619, -0.5, -0.0195184, 0.095693, 0.5, -0.0290329, 0.0980619, -0.5, 0.0194988, 0.095693, 0.5, 0.0290133, 0.0995106, -0.5, -0.00980815, 0.0980619, 0.5, -0.0195184, 0.0995106, -0.5, 0.00978857, 0.0980619, 0.5, 0.0194988, 0.1, -0.5, 0, 0.0995106, 0.5, -0.00980815, 0.0995106, 0.5, 0.00978857, 0.1, 0.5, 0)

[node name="table_01" type="Node3D" node_paths=PackedStringArray("glas_marker01", "glas_marker02", "glas_marker03", "glas_marker04", "standing_marker01", "standing_marker02", "standing_marker03", "standing_marker04")]
script = ExtResource("1_i5vl2")
glas_marker01 = NodePath("Glas_Marker01")
glas_marker02 = NodePath("Glas_Marker02")
glas_marker03 = NodePath("Glas_Marker03")
glas_marker04 = NodePath("Glas_Marker04")
standing_marker01 = NodePath("standing_marker01")
standing_marker02 = NodePath("standing_marker02")
standing_marker03 = NodePath("standing_marker03")
standing_marker04 = NodePath("standing_marker04")

[node name="table_top" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.974504, 0)
visible = false
mesh = SubResource("CylinderMesh_i5vl2")

[node name="StaticBody3D" type="StaticBody3D" parent="table_top"]
visible = false
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="table_top/StaticBody3D"]
visible = false
shape = SubResource("ConvexPolygonShape3D_u7ef4")

[node name="foot" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.501437, 0)
visible = false
mesh = SubResource("CylinderMesh_5ny2m")

[node name="StaticBody3D" type="StaticBody3D" parent="foot"]
visible = false
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="foot/StaticBody3D"]
visible = false
shape = SubResource("ConvexPolygonShape3D_htvo2")

[node name="Glas_Marker01" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.925, 0.3)

[node name="Glas_Marker02" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.3, 0.925, 0)

[node name="Glas_Marker03" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.925, -0.3)

[node name="Glas_Marker04" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.3, 0.925, 0)

[node name="standing_marker01" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.5)

[node name="standing_marker02" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 0, 0)

[node name="standing_marker03" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 0, 0)

[node name="standing_marker04" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.5)

[node name="SciFi Assets" parent="." instance=ExtResource("3_u7ef4")]
